syntax = "proto3";

package prime;
option go_package ="primepb";

message Prime{
        int32 number = 1;
}

message PrimeRequest{
	Prime priming= 1 ;
}

message PrimeResponse{
	int32 result = 1 ;
}

message PrimeStreamingRequest{
	Prime priming= 1 ;
}

message PrimeStreamingResponse{
	int32 result = 1 ;
}

service PrimeService{
	//Unary
	rpc Prime(PrimeRequest) returns (PrimeResponse){};

	//Server Streaming
	rpc PrimeStreaming(PrimeStreamingRequest) returns (stream PrimeStreamingResponse){};
}
